--- a/sale_default_uom/i18n/es.po
+++ b/sale_default_uom/i18n/es.po
@@ -2,15 +2,15 @@
 # This file contains the translation of the following modules:
 # 	* sale_default_uom
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 14.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-23 18:30-0400\n"
-"PO-Revision-Date: 2023-06-23 22:30+0000\n"
+"POT-Creation-Date: 2023-06-23 22:04+0000\n"
+"PO-Revision-Date: 2023-06-23 18:24-0400\n"
 "Last-Translator: \n"
 "Language-Team: \n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -29,13 +29,13 @@ msgstr ""
 #: model:ir.model.fields,field_description:sale_default_uom.field_product_product__sale_uom_id
 #: model:ir.model.fields,field_description:sale_default_uom.field_product_template__sale_uom_id
 msgid "Default Sale UoM"
-msgstr ""
+msgstr "Unidad de medida de venta"
 
 #. module: sale_default_uom
 #: model:ir.model.fields,field_description:sale_default_uom.field_product_template__display_name
 #: model:ir.model.fields,field_description:sale_default_uom.field_sale_order_line__display_name
 msgid "Display Name"
-msgstr ""
+msgstr "Mostrar Nombre"
 
 #. module: sale_default_uom
 #: model:ir.model.fields,field_description:sale_default_uom.field_product_template__id
@@ -47,26 +47,26 @@ msgstr ""
 #: model:ir.model.fields,field_description:sale_default_uom.field_product_template____last_update
 #: model:ir.model.fields,field_description:sale_default_uom.field_sale_order_line____last_update
 msgid "Last Modified on"
-msgstr ""
+msgstr "Última modificación en"
 
 #. module: sale_default_uom
 #: model:ir.model.fields,field_description:sale_default_uom.field_product_product__list_price_base_sale_uom
 #: model:ir.model.fields,field_description:sale_default_uom.field_product_template__list_price_base_sale_uom
 msgid "Price based on Sale Uom"
-msgstr ""
+msgstr "Precio basado en UdM de venta"
 
 #. module: sale_default_uom
 #: model:ir.model,name:sale_default_uom.model_product_template
 msgid "Product Template"
-msgstr ""
+msgstr "Plantilla de producto"
 
 #. module: sale_default_uom
 #: model:ir.model,name:sale_default_uom.model_sale_order_line
 msgid "Sales Order Line"
-msgstr ""
+msgstr "Línea de pedido de venta"
 
 #. module: sale_default_uom
 #: model:ir.model.fields,field_description:sale_default_uom.field_product_product__uom_category_id
 #: model:ir.model.fields,field_description:sale_default_uom.field_product_template__uom_category_id
 msgid "UOM Category"
-msgstr ""
+msgstr "Categoría UOM"
